Pasar la logica de los controladores User, Review a services y creacion de los DTOs